[gd_scene load_steps=2 format=2]

[ext_resource path="res://SaveAndLoad.gd" type="Script" id=1]

[node name="SaveAndLoad" type="Node"]
script = ExtResource( 1 )

[node name="CenterContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 953.0
margin_bottom = 533.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HSplitContainer"]
margin_right = 128.0
margin_bottom = 526.0

[node name="SaveButton" type="Button" parent="CenterContainer/HSplitContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 64 )
text = "Save"

[node name="LoadButton" type="Button" parent="CenterContainer/HSplitContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 128.0
margin_bottom = 132.0
rect_min_size = Vector2( 128, 64 )
text = "Load"

[node name="DeleteButton" type="Button" parent="CenterContainer/HSplitContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 128.0
margin_bottom = 200.0
rect_min_size = Vector2( 128, 64 )
text = "Delete"

[node name="AddHealthButton" type="Button" parent="CenterContainer/HSplitContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 128.0
margin_bottom = 268.0
rect_min_size = Vector2( 128, 64 )
text = "Remove Health"

[node name="DataText" type="TextEdit" parent="CenterContainer/HSplitContainer"]
margin_left = 140.0
margin_right = 946.0
margin_bottom = 526.0
size_flags_horizontal = 3
text = "This is where the data will be printed."
wrap_enabled = true

[connection signal="pressed" from="CenterContainer/HSplitContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/VBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/VBoxContainer/AddHealthButton" to="." method="_on_AddHealthButton_pressed"]
